--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,11 @@ h5 {
     width:100%;
 }
 
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 
 .container {
   width: 800px;
@@ -171,6 +176,7 @@ header {
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding-top: 20px;
+  
 }
 
 header img {
@@ -181,6 +187,10 @@ header nav a {
   margin: 0 20px;
   color: gray;
   text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-direction: row;
 }
 
 .innovation {
@@ -302,7 +312,7 @@ ul {
   }
 
   .container {
-      width: 100%;
+      width: 90%;
   }
 
   .circle {
@@ -324,7 +334,36 @@ ul {
       color: green;
     }
     .container {
-        width: 100%;
+        width: 90%;
+    }
+
+    .mainContainOne{
+        flex-direction: column;
+    }
+
+    .mainContainTwo{
+        flex-direction: column;
+        padding-bottom: 20px;
+    }
+
+    .about {
+        padding-top: 40px;
+    }
+
+    .product {
+        padding-top: 40px;
+    }
+
+    .vision {
+        padding-top: 40px;
+    }
+
+    .container2 {
+        padding-bottom: 40px;
+    }
+
+    .contact {
+        padding-top: 20px;
     }
 
   }
