--- a/css/index.css
+++ b/css/index.css
@@ -155,12 +155,6 @@ h5 {
     width:100%;
 }
 
-.navigation {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
-
 .container {
   width: 800px;
   margin: auto;
@@ -172,25 +166,38 @@ h5 {
 }
 
 header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding-top: 20px;
+
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+padding-top: 20px;
+border: 1px solid red;
   
 }
 
 header img {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border: 1px solid blue;
 }
 
 header nav a {
-  margin: 0 20px;
+  margin: 0 15px;
   color: gray;
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   flex-direction: row;
+  border: 1px solid green;
+}
+
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    border: 1px solid yellow;
 }
 
 .innovation {
@@ -312,7 +319,7 @@ ul {
   }
 
   .container {
-      width: 90%;
+      width: 100%;
   }
 
   .circle {
@@ -326,6 +333,10 @@ ul {
       padding-bottom: 10px;
       background-color: white;
       border: 1px solid black;
+  }
+
+  header {
+    
   }
 }
 
@@ -363,7 +374,29 @@ ul {
     }
 
     .contact {
-        padding-top: 20px;
+        padding-bottom: 20px;
     }
+
+    header {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        padding-top: 20px;
+        border: 1px solid red;
+    }
+
+    nav {
+      width: 100%;
+    }
+
+    header nav a {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        flex-direction: column;
+        padding-top: 20px;
+
+    }
+
 
   }
