--- a/css/index.css
+++ b/css/index.css
@@ -165,7 +165,6 @@ header {
   flex-wrap: wrap;
   flex-direction: row;
   padding-top: 20px;
-  border: 1px solid red;
 }
 
 header img {
@@ -173,7 +172,6 @@ header img {
   flex-direction: row;
   flex-wrap: wrap;
   padding-left: 5%;
-  border: 1px solid blue;
 }
 
 header nav a {
@@ -183,7 +181,6 @@ header nav a {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  border: 1px solid green;
 }
 
 .navigation {
@@ -192,7 +189,6 @@ header nav a {
   flex-direction: row;
   justify-content: space-evenly;
   width: 70%;
-  border: 1px solid yellow;
 }
 
 .innovation {
@@ -248,10 +244,6 @@ h1 {
 }
 
 @media (max-width: 800px) {
-  p {
-    color: red;
-  }
-
   .container {
     width: 100%;
   }
@@ -273,7 +265,6 @@ h1 {
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-evenly;
-
   }
 
   header img {
@@ -287,13 +278,9 @@ h1 {
     align-self: center;
     width: 100% !important;
   }
-
 }
 
 @media (max-width: 500px) {
-  p {
-    color: green;
-  }
   .container {
     width: 90%;
   }
@@ -333,12 +320,13 @@ h1 {
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
-    border: 1px solid red;
+    width: 100%;
   }
 
   .navigation {
     width: 100%;
     align-self: center;
+    order: 2;
   }
 
   header nav a {
@@ -346,12 +334,16 @@ h1 {
     flex-wrap: wrap;
     width: 100%;
     flex-direction: column;
-    padding-top: 20px;
+    align-items: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 1px solid black;
   }
 
   header img {
     padding-left: 0;
-    width: 10%;
+    width: 60%;
     align-self: center;
+    order: 1;
   }
 }
