started services page. Desktop version working. About half way done with tablet.

--- a/css/index.css
+++ b/css/index.css
@@ -243,6 +243,72 @@ h1 {
   font-size: 40px;
 }
 
+/*Services Page*/
+
+.cantainerp2{
+	width: 878px;
+	margin: auto;
+}
+
+.mainContainOne2 p{
+	margin-bottom: 20px;
+}
+
+.services-header-img {
+  width: 100%;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.allBoxes {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: space-between
+}
+
+.allBoxes div {
+	text-align: left;
+	display: flex;
+	width: 48%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	flex-wrap: wrap;
+	border: 1px solid black;
+	background: #f4f2f4;
+}
+
+.allBoxes div h3 , button {
+	margin: 20px;
+}
+
+.allBoxes p {
+	margin-right: 20px;
+	margin-left:  20px;
+}
+
+.lastContain {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.someFacts{
+	width:  48%;
+	padding-top: 20px;
+}
+
+.services-info-img{
+	width:  48%;
+	padding-top: 20px;
+}
+
+ul {
+	list-style-type: square;
+	padding-left: 20px;
+}
+
 @media (max-width: 800px) {
   .container {
     width: 100%;
@@ -278,6 +344,17 @@ h1 {
     align-self: center;
     width: 100% !important;
   }
+
+/*Page 2*/
+.services-header-img {
+  display: none;
+}
+
+.services {
+  padding-top: 50px;
+}
+
+
 }
 
 @media (max-width: 500px) {
