--- a/css/index.css
+++ b/css/index.css
@@ -245,68 +245,69 @@ h1 {
 
 /*Services Page*/
 
-.cantainerp2{
-	width: 878px;
-	margin: auto;
+.cantainerp2 {
+  width: 878px;
+  margin: auto;
 }
 
-.mainContainOne2 p{
-	margin-bottom: 20px;
+.mainContainOne2 p {
+  margin-bottom: 20px;
 }
 
 .services-header-img {
   width: 100%;
-	padding-top: 30px;
-	padding-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .allBoxes {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: space-between
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .allBoxes div {
-	text-align: left;
-	display: flex;
-	width: 48%;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	flex-wrap: wrap;
-	border: 1px solid black;
-	background: #f4f2f4;
+  text-align: left;
+  display: flex;
+  width: 48%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  border: 1px solid black;
+  background: #f4f2f4;
 }
 
-.allBoxes div h3 , button {
-	margin: 20px;
+.allBoxes div h3,
+button {
+  margin: 20px;
 }
 
 .allBoxes p {
-	margin-right: 20px;
-	margin-left:  20px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .lastContain {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.someFacts{
-	width:  48%;
-	padding-top: 20px;
+.someFacts {
+  width: 48%;
+  padding-top: 20px;
 }
 
-.services-info-img{
-	width:  48%;
-	padding-top: 20px;
+.services-info-img {
+  width: 48%;
+  padding-top: 20px;
 }
 
 ul {
-	list-style-type: square;
-	padding-left: 20px;
+  list-style-type: square;
+  padding-left: 20px;
 }
 
 @media (max-width: 800px) {
@@ -345,16 +346,14 @@ ul {
     width: 100% !important;
   }
 
-/*Page 2*/
-.services-header-img {
-  display: none;
-}
+  /*Page 2*/
+  .services-header-img {
+    display: none;
+  }
 
-.services {
-  padding-top: 50px;
-}
-
-
+  .services {
+    padding-top: 50px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -422,5 +421,47 @@ ul {
     width: 60%;
     align-self: center;
     order: 1;
+  }
+
+  .innovation {
+    padding-top: 0;
+  }
+
+  /*page2*/
+
+  .services-info-img {
+    display: none;
+  }
+
+  .someFacts {
+    width: 98%;
+  }
+
+  .allBoxes {
+    flex-direction: column;
+  }
+
+  .box1 {
+    width: 98% !important;
+  }
+
+  .box2 {
+    width: 98% !important;
+  }
+
+  .box3 {
+    width: 98% !important;
+  }
+
+  .box4 {
+    width: 98% !important;
+  }
+
+  .box5 {
+    width: 98% !important;
+  }
+
+  .box6 {
+    width: 98% !important;
   }
 }
